--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
     "gulp-wrap": "^0.14.0",
     "gulp-zip": "^4.2.0",
     "jquery": "^3.3.1",
+    "jstransformer-marked": "^1.0.3",
+    "jstransformer-nunjucks": "^0.5.0",
+    "metalsmith": "^2.3.0",
+    "metalsmith-in-place": "^4.2.0",
+    "metalsmith-rename": "^1.0.0",
     "nunjucks": "^3.1.3",
     "sass-lint": "^1.12.1"
   },
