--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "metalsmith-in-place": "^4.2.0",
     "metalsmith-rename": "^1.0.0",
     "nunjucks": "^3.1.3",
+    "pretty": "^2.0.0",
     "sass-lint": "^1.12.1"
   },
   "files": [
